--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,14 +1,14 @@
-name: Build and Push Docker Image
-
+name: Build Huggingface Image
 on:
   push:
-    branches: [ main ]
+    branches: [ hug ]
     paths:
       - 'Dockerfile'
       - 'index.js'
       - 'package.json'
+      - 'index.html'
   pull_request:
-    branches: [ main ]
+    branches: [ hug ]
   workflow_dispatch:
 
 jobs:
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: hug
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -37,12 +39,10 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/ws:latest
+          tags: ghcr.io/${{ github.repository_owner }}/hugws:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
-            org.opencontainers.image.description=HTTP Server
+            org.opencontainers.image.description=Lightweight HTTP server for HugWS
             org.opencontainers.image.licenses=MIT
           cache-from: type=gha
           cache-to: type=gha,mode=max
